--- a/Ejercicio1.html
+++ b/Ejercicio1.html
@@ -8,5 +8,6 @@
     <p>Esta es mi primer pagina, es muy sencilla,
         pero como el lenguaje HTML es facil, pronto
     estare en condiciones de hacer cosas mas interesantes  </p>
+    <p>Esto es solo para Git . </p>
 </body>
 </html>
